--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Connect 4 Board Evaluation",
+    "name": "Connect 4 AI",
     "version": "1.0",
     "description": "Displays best moves for both players in Papergames Connect 4.",
     "permissions": ["storage", "scripting", "activeTab"], 
