--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "Displays best moves for both players in Papergames Connect 4.",
     "permissions": ["storage", "scripting", "activeTab"], 
     "icons": {
-      "48": "icons/icon.png"  
+      "48": "icons/icon.jpg"  
     },
     "host_permissions": [
       "https://papergames.io/*",
@@ -20,7 +20,7 @@
     ],
     "action": {
       "default_popup": "popup.html", 
-      "default_icon": "icons/icon.png"
+      "default_icon": "icons/icon.jpg"
     },
     "web_accessible_resources": [
       {
